# speech2text

./: .gitignore  .gitmodules  CMakeLists.txt  config.ini  main.cpp
docs/uml/: usecase.puml  wav2text.puml
speech2text/: CMakeLists.txt  config.hpp  errorc.hpp  speech2text.cpp  speech2text.hpp  wavreader.hpp
src/: CMakeLists.txt  config.hpp  errorc.hpp
wav/: README.txt
